--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,27 +1,50 @@
 ---
-haproxy_socket: /var/lib/haproxy/stats
-haproxy_chroot: /var/lib/haproxy
-haproxy_user: haproxy
-haproxy_group: haproxy
-
-# Frontend settings.
-haproxy_frontend_name: 'hafrontend'
-haproxy_frontend_bind_address: '*'
-haproxy_frontend_port: 80
-haproxy_frontend_mode: 'http'
-
-# Backend settings.
-haproxy_backend_name: 'habackend'
-haproxy_backend_mode: 'http'
-haproxy_backend_balance_method: 'roundrobin'
-haproxy_backend_httpchk: 'HEAD / HTTP/1.1\r\nHost:localhost'
-
-# List of backend servers.
-haproxy_backend_servers: []
-  # - name: app1
-  #   address: 192.168.0.1:80
-  # - name: app2
-  #   address: 192.168.0.2:80
-
-# Extra global vars (see README for example usage).
-haproxy_global_vars: []
+haproxy:
+  logs:
+   - /dev/log  local0
+   - /dev/log  local1 notice
+  global:
+    socket: /var/lib/haproxy/stats
+    chroot:  /var/lib/haproxy
+    user: haproxy
+    group: haproxy
+  listen:
+    stats:
+      bind: '*:8181'
+      stats:
+        enable: ""
+        uri: "/"
+        realm: "Haproxy\ Statistics"
+        auth: haproxy:haproxy
+  frontend:
+    hafrontend:
+      bind: '*:80'
+      mode: 'http'
+      option:
+      default_backend: "habackend"
+  backend:
+    habackend:
+      bind: '*'
+      mode: 'http'
+      balance: 'roundrobin'
+      option: ''
+      reqadd: []
+      server: []
+  timeout:
+    http-request: 10s
+    queue: 1m
+    connect: 10s
+    client: 1m
+    server: 1m
+    http-keep-alive: 10s
+    check: 10s
+  defaults:
+    mode: 'http'
+    log: 'global'
+    retries: 3
+    option:
+      httplog:
+      dontlognull:
+      http-server-close:
+      forwardfor: except 127.0.0.0/8
+      redispatch:
