--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
+  author: johnbedr
   description: HAProxy installation and configuration.
   company: "Midwestern Mac, LLC"
   license: "license (BSD, MIT)"
@@ -12,11 +12,6 @@ galaxy_info:
     versions:
       - 6
       - 7
-  - name: Ubuntu
-    versions:
-      - precise
-      - trusty
-      - xenial
   galaxy_tags:
     - web
     - networking
