--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
-- name: Ensure HAProxy is installed.
+- name: HAProxy | Ensure HAProxy is installed.
   package: name=haproxy state=present
 
-- name: Get HAProxy version.
+- name: HAProxy | Get HAProxy version.
   command: haproxy -v
   register: haproxy_version_result
   changed_when: false
   check_mode: no
 
-- name: Set HAProxy version.
+- name: HAProxy | Set HAProxy version.
   set_fact:
     haproxy_version: "{{ '1.5' if '1.5.' in haproxy_version_result.stdout else '1.4' }}"
 
-- name: Copy HAProxy configuration in place.
+- name: HAProxy | Copy HAProxy configuration in place.
   template:
     src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
@@ -20,5 +20,5 @@
     validate: haproxy -f %s -c -q
   notify: restart haproxy
 
-- name: Ensure HAProxy is started and enabled on boot.
+- name: HAProxy | Ensure HAProxy is started and enabled on boot.
   service: name=haproxy state=started enabled=yes
